<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/bgx_devices"
        android:layout_width="362dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/connect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bgx_devices" />

    <Switch
        android:id="@+id/loopback_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/loopback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connect_button" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="Data Tx Size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/integrity_error_tv"
        android:layout_width="260dp"
        android:layout_height="23dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logBoundariesSwitch" />

    <Switch
        android:id="@+id/ackwrites_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:text="@string/ack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loopback_switch" />

    <Button
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/transmitDataBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:enabled="false"
        android:text="@string/txdata"
        app:layout_constraintStart_toEndOf="@+id/clear_button"
        app:layout_constraintTop_toBottomOf="@+id/bpsTV" />

    <TextView
        android:id="@+id/fileInfo"
        android:layout_width="196dp"
        android:layout_height="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:text="..."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toEndOf="@+id/CaptureButton"
        app:layout_constraintTop_toBottomOf="@+id/transmitDataBtn" />

    <Switch
        android:id="@+id/logBoundariesSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="Log Boundaries"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CaptureButton" />

    <Button
        android:id="@+id/CaptureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="Capture Data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transmitDataBtn" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="77dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:text="MTU Size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ackwrites_switch" />

    <TextView
        android:id="@+id/bytesRxTV"
        android:layout_width="151dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/default_value"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/dataTxSize" />

    <EditText
        android:id="@+id/dataTxSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        android:text="60"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/mtu_size" />

    <TextView
        android:id="@+id/bpsTV"
        android:layout_width="146dp"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/default_value"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/bytesRxTV" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/bytesrx"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/bytespersec"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Switch
        android:id="@+id/TMP_switch"
        android:layout_width="103dp"
        android:layout_height="24dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:checked="false"
        android:text="@string/TMP_switch_label"
        app:layout_constraintStart_toEndOf="@+id/loopback_switch"
        app:layout_constraintTop_toBottomOf="@+id/disconnect_button" />

    <EditText
        android:id="@+id/mtu_size"
        android:layout_width="156dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="number"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/ackwrites_switch" />

    <Button
        android:id="@+id/disconnect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:enabled="false"
        android:text="@string/disconnect"
        app:layout_constraintStart_toEndOf="@+id/connect_button"
        app:layout_constraintTop_toBottomOf="@+id/bgx_devices" />

    <ProgressBar
        android:id="@+id/transmit_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/transmitDataBtn"
        app:layout_constraintTop_toBottomOf="@+id/bpsTV"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/set_mtu"
        android:layout_width="64dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="set"
        app:layout_constraintStart_toEndOf="@+id/mtu_size"
        app:layout_constraintTop_toBottomOf="@+id/ackwrites_switch" />

</android.support.constraint.ConstraintLayout>